k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - port: 11479
      protocol: TCP
      #redis默认端口
      targetPort: 6379
      nodePort: 31003
  type: NodePort
