k8s-webook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook
#规格说明，这是一个怎样的服务
spec:
  type: LoadBalancer
  selector:
    app: webook
  ports:
    - name: http
      port: 81
      protocol: TCP
      targetPort: 8080
